[project]
name = "gsa-triton"
version = "0.1.0"
description = "GSA reference (PyTorch) and Triton-optimized implementations with benchmark"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
